--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+		<script
+			src="https://assets.juicer.io/embed.js"
+			type="text/javascript"
+		></script>
 	</body>
 </html>
