--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+		<!-- <div
+			loading="lazy"
+			data-mc-src="70649383-2961-43d5-b085-2179e3d2e443#instagram"
+		></div>
+
 		<script
-			src="https://assets.juicer.io/embed.js"
-			type="text/javascript"
-		></script>
+			src="https://cdn2.woxo.tech/a.js#625dc6f3aea3030021dc5f40"
+			async
+			data-usrc
+		></script> -->
 	</body>
 </html>
